# octa-erp-octa-migracao-agente

./: README.md  install.ps1  pyproject.toml
src/: pg_client.py  supabase_client.py
src/octa_migracao_agente/: __init__.py  cli.py  config.py  entidades.py  runner.py
